# Bharat-Quandex

./: .coverage  .coveragerc  .gitattributes  .gitignore  COMPREHENSIVE_ANALYSIS_REPORT.md  LICENSE  coverage.xml  dashboard.py  debug_script.py  pyproject.toml  structure.txt
.github/workflows/: python-test.yml
.virtual_documents/research_lab/: 01-data-pipeline-poc.ipynb
quandex_core/: config.py
quandex_core/data_engine/: nse_equity_fetcher.py
quandex_core/market_insights/: fii_dii_tracker.py  trading_holidays.py  transaction_costs.py
quandex_core/portfolio_logic/: backtest_engine.py  risk_models.py
quandex_core/strategy_blueprints/: momentum_surge.py  pairs_arbitrage.py
research_lab/: 01-data-pipeline-poc.ipynb
research_lab/.ipynb_checkpoints/: 01-data-pipeline-poc-checkpoint.ipynb
tests/: test_config.py
tests/data_engine/: test_nse_equity_fetcher.py
tests/market_insights/: test_fii_dii_e2e.py  test_fii_dii_integration.py  test_fii_dii_scraping_unit.py  test_fii_dii_unit.py  test_fii_dii_validation_op.py  test_trading_holidays.py  test_transaction_costs.py
