[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bharat-quandex"
version = "0.1.0"
description = "Sophisticated local trading analysis system for Indian markets"
authors = [{name = "Solo Quant"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13.3"

dependencies = [
    # Data Core
    "polars>=1.30.0",
    "duckdb>=0.9.0",
    # Speed Core
    "numba>=0.58.0",
    # Data Sources
    "yfinance>=0.2.0",
    "nsepy>=0.8.0",
    # Quant & ML Core
    "pyfolio-reloaded>=0.9.0",
    "empyrical-reloaded>=0.5.0",
    "pandas-ta==0.3.14b0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "optuna>=3.4.0",
    "statsmodels",
    # Interface
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    # Utilities
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.6.0",
    # Development
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["quandex_core"]
